add new branch as account-history

--- a/UI/account-history.html
+++ b/UI/account-history.html
@@ -12,9 +12,9 @@
         <nav>
             <ul class="nav-menu">
                 <img class="logo"src='/UI/images/lotus-with-hands-1889661_960_720.png'>
-             <li> <a href="#" > Home</a> </li> 
+             <li> <a href="../index.html" > Home</a> </li> 
               <li> <a href="login.html" > Login </a> </li>
-              <li> <a href="#" > Account-history</a> </li>
+              <li> <a href="account-history.html" > Account-history</a> </li>
               <li> <a href="#" > Contact us</a> </li>
              
             </ul>
