--- a/UI/login.html
+++ b/UI/login.html
@@ -12,10 +12,11 @@
         <nav>
             <ul class="nav-menu">
                 <img class="logo"src='/UI/images/lotus-with-hands-1889661_960_720.png'>
-             <li> <a href="#" > Home</a> </li> 
+                <h1  id="project">My Dairy</h1>
+                <li> <a href="../index.html" > Home</a> </li> 
               <li> <a href="login.html" > Login </a> </li>
-              <li> <a href="#" > Account-history</a> </li>
-              <li> <a href="#" > Contact us</a> </li>
+              <li> <a href="signup.html" > sign up</a> </li>
+              <li> <a href="account-history.html" >account history</a> </li>
              
             </ul>
          </nav>
